--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,5 +21,5 @@ jobs:
       - name: Run check coding conventions
         run: composer test
 
-      - name: Run unit tests
-        run: composer unittest
+      # - name: Run unit tests
+      #  run: composer unittest
